<resources>
    <string name="app_name">Github Search</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="updated">Updated</string>
    <string name="no_results">No results. Please enter a repository name.</string>
    <string name="watcher_count">watchers:</string>
    <string name="fork_count">forks:</string>
    <string name="issue_count">issues:</string>
    <string name="repo_desc">Repository description</string>
    <string name="created_at">Created at:</string>
    <string name="updated_at">Updated at:</string>
    <string name="language">Language</string>
    <string name="more_info">More info</string>
    <string name="owner_info">Owner info</string>
    <string name="text_not_available">N/A</string>
    <string name="type">Type:</string>
    <string name="error_403">Scrolling to fast may cause 403 error (Github API restriction). Also, check your connection.</string>
</resources>
