<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.repo.RepoActivity"
        android:id="@+id/coordinator"
        android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
                layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/repo_desc"/>

        <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/repo_text_size"
                tools:text="This is description"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">

            <TextView
                android:text="@string/created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/repo_text_size"
                android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tvCreatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/repo_text_size"
                    tools:text="12.02.2001"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">

            <TextView
                    android:text="@string/updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/repo_text_size"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tvUpdatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/repo_text_size"
                    tools:text="12.02.2001"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">

            <TextView
                    android:text="@string/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/repo_text_size"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/repo_text_size"
                    tools:text="Kotlin"/>

        </LinearLayout>

        <Button
                android:id="@+id/bMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                android:text="@string/more_info"/>

        <Button
                android:id="@+id/bOwnerInfo"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/owner_info"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>