<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/row_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@android:color/white">

    <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/owner_info"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                tools:text="Name"/>

        <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Author"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:text="@string/watcher_count"/>

            <TextView
                    android:id="@+id/watchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"/>

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="?android:attr/listDivider"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:text="@string/fork_count"/>

            <TextView
                    android:id="@+id/forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="17"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:text="@string/issue_count"/>

            <TextView
                    android:id="@+id/issues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="19"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>