<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.UserActivity"
        android:id="@+id/coordinator"
        android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
                layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
                android:id="@+id/ivThumbnail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/owner_info"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">

            <TextView
                    android:text="@string/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/repo_text_size"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/repo_text_size"
                    tools:text="User"/>

        </LinearLayout>

        <Button
                android:id="@+id/bMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                android:text="@string/more_info"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>